test/kubernetes/e2e/features/glooctl/testdata/upstream.yaml
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: nginx-upstream
spec:
  kube:
    selector:
      app.kubernetes.io/name: nginx
    serviceName: nginx-svc
    serviceNamespace: nginx
    servicePort: 8080
