test/kubernetes/e2e/features/glooctl/testdata/vs-invalid-kube-dest.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: reject-me-too
  namespace: default
spec:
  virtualHost:
    routes:
      - matchers:
          - prefix: /good-route
        routeAction:
          single:
            kube:
              ref:
                name: nginx
                namespace: default
              port: 8080
        options:
          prefixRewrite: /api/pets
      - matchers:
          - prefix: /bad-route
        routeAction:
          single:
            # this destination does not exist
            kube:
              ref:
                name: does-not-exist
                namespace: anywhere
              port: 1234
        options:
          prefixRewrite: /api/pets
