test/kubernetes/e2e/features/glooctl/testdata/vs-invalid-upstream.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: reject-me
  # This resource will be in the installation namespace
spec:
  virtualHost:
    routes:
      - matchers:
          - headers:
              - name: foo
                value: bar
        routeAction:
          single:
            upstream:
              name: does-not-exist
